--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ http {
     include /etc/nginx/mime.types;
 
     upstream voting{
-        server voting:5000;
+        server votingapp:8080;
     }
 
     server {
