--- a/votingapp.yml
+++ b/votingapp.yml
@@ -1,18 +1,64 @@
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
   name: votingapp
 spec:
   replicas: 3
+  revisionHistoryLimit: 3
+  minReadySeconds: 30
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: votingapp
+      deployment: v1.0
   template:
     metadata:
       labels:
         app: votingapp
+        deployment: v1.0
       name: votingapp
     spec:
       containers:
         - image: paulopez/votingapp:0.1
           name: votingapp
+          readinessProbe:
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            successThreshold: 1
+            failureThreshold: 1
+            httpGet:
+              path: /ready
+              port: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: votingapp
+  namespace: votingapp
+spec:
+  ports:
+    - port: 8080
+      protocol: TCP
+      targetPort: 5000
+  selector:
+    app: votingapp
+  type: ClusterIP
+
+---
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  name: votingapp-ingress
+spec:
+  rules:
+    - host: votingapp.io
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: votingapp
+              servicePort: 8080
